# Mastodon.py

./: .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.rst  CITATION.cff  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  MANIFEST.in  Mastodon.py  Pipfile  README.md  README.rst  SECURITY.md  TODO.md  index.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.githooks/: pre-commit
docs/: .index.rst.kate-swp  01_general.rst  02_return_values.rst  03_errors.rst  04_auth.rst  05_statuses.rst  06_accounts.rst  07_timelines.rst  08_instances.rst  09_notifications.rst  10_streaming.rst  11_misc.rst  12_utilities.rst  13_admin.rst  14_contributing.rst  15_everything.rst  Makefile  conf.py  index.rst  requirements.txt  update_everything_page.sh
mastodon/: .Mastodon.py.kate-swp  Mastodon.py  __init__.py  _url_regex.py  accounts.py  admin.py  authentication.py  compat.py  conversations.py  defaults.py  endorsements.py  error.py  errors.py  exceptions.py  favourites.py  filters.py  hashtags.py  instance.py  internals.py  lists.py  media.py  notifications.py  polls.py  preferences.py  push.py  relationships.py  reports.py  response.py  return_types.py  search.py  statuses.py  streaming.py  streaming_endpoints.py  suggestions.py  timeline.py  trends.py  types.py  types_base.py  utility.py  utils.py  (+1 more)
paper/: paper.bib  paper.md
srcgen/: GenerateReturnTypes.ipynb  ValidateEntities.ipynb  entities_masto.json  entities_todo.txt  return_types.json  return_types_all_current_fixed.json  return_types_all_current_fixed_bu.json  return_types_merged.json  return_values.json
tests/: README.markdown  conftest.py  fixtures.py  run_mastodon_for_tests.sh  setup.sql  setup_app.sql  test_account.py  test_admin.py  test_admin_trends.yaml  test_auth.py  test_blurhash.py  test_bookmarks.py  test_constructor.py  test_create_app.py  test_domain_blocks.py  test_entities.py  test_errors.py  test_filters.py  test_follow_requests.py  test_hooks.py  test_instance.py  test_lists.py  test_markers.py  test_media.py  test_notifications.py  test_polls.py  (+10 more)
(+285 files in other folders)
